# openjwc-qqbot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
plugins/fetch_news/: __init__.py  client.py  config.py  model.py
plugins/hello/: __init__.py
plugins/news/: __init__.py  client.py  config.py  model.py  search.py  sync.py
